<resources>
    <string name="app_name">Vault</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="card">Card</string>
    <string name="add_login_details">add_login_details</string>
    <string name="generate_password">generate_password</string>
    <string name="website">Website</string>
    <string name="email_or_username">email_or_username</string>
    <string name="category">category</string>
    <string name="card_number">card_number</string>
    <string name="card_holder">card_holder</string>
    <string name="expiry_date">expiry_date</string>
    <string name="cvv">cvv</string>
    <string name="password_generator">Password Generator</string>
    <string name="your_secure_password_appears_here">Your secure password appears here</string>
    <string name="settings">Settings</string>
    <string name="generate">Generate</string>
    <string name="copy">Copy</string>
    <string name="r">!@#$%^*</string>
    <string name="_0_9">0-9</string>
    <string name="a_z">a-z</string>
    <string name="A_Z">A-Z</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="_0">0</string>
    <string name="x">X</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="todo">TODO</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="change_pin">Change pin</string>
    <string name="old_pin">Old Pin</string>
    <string name="websitename">websitename</string>
    <string name="this_keeps_your_app_secure">THIS KEEPS YOUR APP SECURE</string>

    <string name="issue_by">Issue By</string>
    <string name="card_number1">Card Number</string>
    <string name="expiry_date1">Expiry Date</string>
    <string name="issuer">Issuer</string>
    <string name="card_holder1">Card Holder</string>
    <string name="cvv1">CVV</string>
    <string name="add_card1">Add Card</string>
    <string name="dibya_ranjan_barwa">Dibya Ranjan Barwa</string>
    <string name="visa">VISA</string>
    <string name="username_or_email">Username or Email</string>
    <string name="aditional_notes_optional">Aditional Notes (optional)</string>
    <string name="google">Google</string>
    <string name="cardcreds">CardCreds</string>
    <string name="logincreds">LoginCreds</string>
    <string name="enter_your_pin">Enter your Pin</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="do_you_want_to_change_the_passcode">Do you Want to Change the Passcode</string>
    <string name="passcode">Passcode</string>


</resources>