<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/demoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/password_generator"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/generatedPassword"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:hint="@string/your_secure_password_appears_here"
        android:textSize="24sp"
        android:textColor="#5492C3"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/generatedPassword"
        android:layout_margin="20dp"
        android:text="@string/settings"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/capitalsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsText"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:checked="true"
        android:gravity="left"
        android:text="@string/A_Z"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/smallLetterSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/capitalsSwitch"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:checked="true"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:text="@string/a_z"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/numberSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/smallLetterSwitch"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:text="@string/_0_9"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/symbolSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numberSwitch"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:text="@string/r"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml" />

    <SeekBar
        android:id="@+id/lengthSeekBar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/symbolSwitch"
        android:layout_margin="20dp"
        android:max="50"
        android:progress="16" />

    <TextView
        android:id="@+id/lengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lengthSeekBar"
        android:layout_centerHorizontal="true"
        android:text="Length: 24"
        android:textSize="18sp" />

    <Button
        android:id="@+id/copyPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/generatePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/copy"
        android:textColor="#fff" />

    <Button
        android:id="@+id/generatePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lengthText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/teal_700"
        android:padding="10dp"
        android:text="@string/generate"
        android:textColor="#fff" />


</RelativeLayout>